# azure-ai-agent-quickstart

./: .env.example  .gitignore  README.md  docker-compose.yml  run.sh
api/: Dockerfile  pyproject.toml
api/app/: agent.py  agents_registry.py  budget.py  config.py  evaluation.py  llm.py  main.py  persistence.py  telemetry.py
api/app/providers/: __init__.py  _instrumented.py  _openai_compat.py  azure.py  base.py  openai.py
api/app/routers/: budget.py  chat.py  evaluations.py  providers.py  runs.py  traces.py
api/app/tools/: calc.py  search.py  sql.py  web.py
api/sample_docs/: 01-what-is-azure-openai.md  02-deploying-gpt-4o-mini.md  03-endpoint-and-keys.md  04-pricing.md  05-function-calling.md  06-streaming.md  07-prompt-engineering.md  08-azure-ai-foundry.md  09-azure-ai-search.md  10-rag-patterns.md  11-agent-basics.md  12-tool-calling-loop.md  13-managed-identity.md  14-content-safety.md  15-rate-limits.md  16-evaluating-output.md  17-responsible-ai.md  18-application-insights.md  19-regions.md  20-model-migration.md
api/tests/: test_agent.py  test_instrumented_provider.py  test_providers.py  test_web_search.py
docs/: GET_AZURE_KEYS.md
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: AgentPicker.tsx  ChatPanel.tsx  DevDrawer.tsx  Inspector.tsx  WebSearchToggle.tsx
