[project]
name = "azure-ai-agent-quickstart-api"
version = "0.1.0"
description = "FastAPI backend for the Azure AI Agent Quickstart."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "openai==1.54.3",
    "azure-identity==1.19.0",
    "azure-search-documents==11.5.2",
    "azure-monitor-opentelemetry==1.6.4",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "sse-starlette==2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
